--- a/gb/21/5/12/n12944119.md
+++ b/gb/21/5/12/n12944119.md
@@ -1,12 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pyydox3878/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pyydox3878/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pyydox3878/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pyydox3878/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pyydox3878/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pyydox3878/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pyydox3878/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【横河观点】美制裁610谁怕了 记者遇袭幕后谁？</h2>
-
+<a href="https://d1fejrztdgsube.cloudfront.net/Z6hnS3Cgd"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年05月13日讯】今天是5月12日，星期三，今天事情很多，讲三个：美国首次制裁610官员、谁是袭击香港<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83%E8%AE%B0%E8%80%85.md#1">大纪元记者</a>的策划者、福奇（Anthony Fauci）参议院听证。</p>
-<p>余辉成为首个被美国制裁的中共610官员，制裁有没有用？香港<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83%E8%AE%B0%E8%80%85.md#1">大纪元记者</a>遇袭，谁在幕后？福奇对功能增强实验一问三不知。</p>
+	<p>【大纪元2021年05月13日讯】今天是5月12日，星期三，今天事情很多，讲三个：美国首次制裁610官员、谁是袭击香港<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83%E8%AE%B0%E8%80%85.md#1">大纪元记者</a>的策划者、福奇（Anthony Fauci）参议院听证。</p>
+<p>余辉成为首个被美国制裁的中共610官员，制裁有没有用？香港<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%AA%E5%85%83%E8%AE%B0%E8%80%85.md#1">大纪元记者</a>遇袭，谁在幕后？福奇对功能增强实验一问三不知。</p>
+<p><center><a src=""></a><a href="https://d1fejrztdgsube.cloudfront.net/Z6hnS3Cgd"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/84e3d536-ec68-4085-a1da-79f86f39c335?r=16x9&amp;d=1821" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
 <h2>美国制裁中共610官员</h2>
 <p>今天，美国国务院宣布，将成都市原610办公室主任余辉列入制裁名单，余辉及其直系亲属将被禁止进入美国。这是第一个因担任610办公室主任迫害法轮功而被美国公开制裁的中共官员。国务卿布林肯也在自己的推特上发布了这一消息。</p>
 <p>今天是美国国务院发布2020国际宗教自由报告的日子，布林肯就此发表了讲话。讲话中还特意提到了对余辉的制裁。</p>
@@ -26,8 +27,8 @@
 <p>还有一个需要注意的是被制裁的多半是现在还在位的，不一定是犯罪时的位置，这样才有震慑作用，余辉可能就具备这些条件，曾经是四川这个大省的省府成都市610正职主任，现在还是成都高新技术产业开发区管理委员会主任，看来是个有油水又非常有可能经常出国的。</p>
 <h2>香港大纪元记者梁珍被暴徒袭击</h2>
 <p>5月11日，香港大纪元记者梁珍在住所外等车时被暴徒袭击，引起从美国国务院到各国政要和记者、人权团体的谴责。这件事不是偶然的，因为就在一个月前，4月12日，四名暴徒闯进《大纪元时报》印刷厂破坏机器和电脑。这不会是香港官方或本地黑帮的行为，而更可能是中共策划的。</p>
-<p>我们先看香港官方，包括警方，在这件事上最多是不作为，或不积极作为。香港黑帮，黑帮多半是抢夺势力范围，和《大纪元时报》毫不相干，<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E9%BB%91%E7%A4%BE%E4%BC%9A.md#1">香港黑社会</a>会被中共利用，但在没有命令的情况下不会主动介入政治案件，因为他们也怕判断错误。</p>
-<p>而<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B8%97%E9%80%8F%E9%A6%99%E6%B8%AF.md#1">中共渗透香港</a>，第一步就是黑社会。最有名的就是97移交前，被认为公安部为顺利移交，和<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E9%BB%91%E7%A4%BE%E4%BC%9A.md#1">香港黑社会</a>有接触谈判，来自公安部长陶驷驹1992年说的：“我发现有不少侨团组织，他也可以说有一种社团性质，或者有些人的思维，把他们看成黑社会，其实我看他们也很爱国。”</p>
+<p>我们先看香港官方，包括警方，在这件事上最多是不作为，或不积极作为。香港黑帮，黑帮多半是抢夺势力范围，和《大纪元时报》毫不相干，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E9%BB%91%E7%A4%BE%E4%BC%9A.md#1">香港黑社会</a>会被中共利用，但在没有命令的情况下不会主动介入政治案件，因为他们也怕判断错误。</p>
+<p>而<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B8%97%E9%80%8F%E9%A6%99%E6%B8%AF.md#1">中共渗透香港</a>，第一步就是黑社会。最有名的就是97移交前，被认为公安部为顺利移交，和<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E9%BB%91%E7%A4%BE%E4%BC%9A.md#1">香港黑社会</a>有接触谈判，来自公安部长陶驷驹1992年说的：“我发现有不少侨团组织，他也可以说有一种社团性质，或者有些人的思维，把他们看成黑社会，其实我看他们也很爱国。”</p>
 <p>后来被人说成“黑社会也有爱国的”，其实他1993年的另一次讲话更直接，他说：“我曾经有一次担任过出国的保护任务，随国家领导人到某个外国，当时就有一个类似三合会的组织，他们就出了800人，出来保护我们国家的领导人。”香港黑帮主要就是三合会。</p>
 <p>只有中共具有动机、资源和能力来策划。中共收买统战了海外几乎所有中文媒体，极少数不被收买的就以大纪元新唐人媒体集团，影响力最大，对抗中共大外宣的能力也最强；而香港又是新闻自由的最前线，香港抗争期间，《大纪元时报》最及时准确报导，得到港人的支持和赞扬；中共在香港已经有能力，无论是收买当地打手或是自己派人过去都很容易。</p>
 <p>但还是这句话，中共已经通过《国安法》直接在香港抓人判人了，却还是要用这种当年闹革命的地下党手段，实在是可耻。</p>
@@ -37,48 +38,52 @@
 <p>这里想说明几点。1）基金的申请一般需要有初步结果，而有了初步结果后实验也就结束了，也就是说，基金往往用于下一个实验或进一步实验，而不是申请的那个，大家都是这么做的。加州理工校长巴尔的摩就曾经说过，科研基金就是做你申请里没有说要做的。作为给钱的一方，应该监督基金的使用的。</p>
 <p>2）有人曾经留言说应该查美国，尽管放心，美国国会、媒体、政府总有人会查的，有一点问题早就被挖个底朝天了，美国没有自上而下的系统的阴谋，中共才有。</p>
 <p>美国媒体最喜欢挖政府，还记得当年《纽时》和《华邮》公布美国五角大楼文件。中共的问题并不在于一个自然发生的传染病发生在中国，而是该传染病的源头有疑点，而且还有隐瞒。</p>
-<p>《<ahref="https://github.com/pyydox3878/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>》制作组</p>
+<p>订阅<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>：<ahref="https://bit.ly/3pHMthA">https://bit.ly/3pHMthA</a><br />
+支持我们：<ahref="https://donorbox.org/henghenews">https://donorbox.org/henghenews</a><br />
+订阅“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>”Youmaker 优美客频道：<br />
+<ahref=""></a><a href="https://d1fejrztdgsube.cloudfront.net/Z6hnS3Cgd"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/HengHe">"></a><a href="https://d1fejrztdgsube.cloudfront.net/Z6hnS3Cgd"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/HengHe</a></p>
+<p>《横河观点》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pyydox3878/djy/blob/master/gb/21/5/4/n12924866.md#1">【横河观点】病毒实验室泄漏说 来自这里？</a></li>
-<li><a href="https://github.com/pyydox3878/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a></li>
-<li><a href="https://github.com/pyydox3878/djy/blob/master/gb/21/5/8/n12933661.md#1">【横河观点】世卫认国药疫苗？生物战渐受关注</a></li>
-<li><a href="https://github.com/pyydox3878/djy/blob/master/gb/21/5/12/n12940990.md#1">【横河观点】新生儿数据矛盾 学生坠亡疑点解析</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/4/n12924866.md#1">【横河观点】病毒实验室泄漏说 来自这里？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/8/n12933661.md#1">【横河观点】世卫认国药疫苗？生物战渐受关注</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12940990.md#1">【横河观点】新生儿数据矛盾 学生坠亡疑点解析</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/pyydox3878/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12923553.md#1">《推背图》预言大戏尾声的丰碑事件</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12922723.md#1">【命理】哪一种命的人生最为舒适？</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/4/30/n12916967.md#1">现实与梦境交叠？前世出家为僧 今生入世为官</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/7/n12931723.md#1">【未解之谜】科学聚焦：人的意念对植物有影响</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12940990.md#1">【横河观点】新生儿数据矛盾 学生坠亡疑点解析</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12942408.md#1">【新闻大家谈】亲历者曝中共黑手渗透美国</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12942795.md#1">【重播】国际宗教自由报告发布 布林肯讲话</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936426.md#1">武汉午后白昼如夜 暴雨倾盆 网民：太吓人</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937748.md#1">再陷刹车风波 Tesla：事发时油门被深度踩下</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937860.md#1">消息：盖茨夫妇离婚 与会晤爱泼斯坦有关</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/9/n12935234.md#1">吴尊庆母亲节晒妈妈照片 网友惊叹婆媳相像</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937591.md#1">被命理师预言晚婚 萧敬腾认真回复引热议</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936096.md#1">(G)I-DLE四成员开设个人IG 舒华简介“很舒华”</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12940428.md#1">阿娇身材发福引热议 一日五餐以上吃到吐</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937846.md#1">章子怡晒夫妻合照庆纪念日 继女一举动显亲子情</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937122.md#1">咖啡有哪些优缺点？专家告诉你</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/9/n12933892.md#1">知名传染病专家打2剂疫苗 染疫离世 专家析原因</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937111.md#1">吃香蕉可以减肥 营养学家建议每天一根</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936099.md#1">史上第一人 尼泊尔男子登上圣母峰25次</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12938105.md#1">【重播】印度死亡惨烈 缺医生缺氧气 如何自救？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/11/n13733580.md#1">听《顶碗舞》品蒙古奶茶 体验千年不变的热情</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740136.md#1">【拍案惊奇】民航系统不单纯 涉党内倒习操作？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739992.md#1">【新闻大家谈】中共催生与民斥“最后一代”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738712.md#1">张艺兴在节目中发烧 疑未通报做核酸检测惹议</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739082.md#1">为什么你不应该忍便？ 专家这么说</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pyydox3878/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pyydox3878/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/12/n12944119.htm">【横河观点】美制裁610谁怕了 记者遇袭幕后谁？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/12/n12944119.htm">【横河观点】美制裁610谁怕了 记者遇袭幕后谁？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pyydox3878/djy/blob/master/gb/21/5/12/n12944119.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pyydox3878/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pyydox3878/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pyydox3878/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pyydox3878/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyydox3878/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12944119.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
